# liturgy

./: .gitignore  Cargo.toml  Dockerfile  calendar_of_2025_base.csv  calendar_of_2025_with_us_extensions.csv  dockerbuild.sh  icon.txt  liturgy_2023.csv  liturgy_2024.csv  liturgy_2025.csv  liturgy_2026.csv  liturgy_2027.csv  readme.md
calendar_calc/: Cargo.toml  calendar_2025.csv  readme.md
calendar_calc/calendar_data/: 54.toml  54.toml.bak  54.toml.bak1  ef.toml  of.toml
calendar_calc/examples/: feast_extensions_demo.rs
calendar_calc/src/: calender.rs  date_calc.rs  lib.rs
calendar_calc/src/calender/: day_type.rs  fuzzy_search.rs  generic_calendar.rs  year_calendar.rs  year_calendar_builder.rs
calendar_calc/tests/: test_1954.rs  test_1962.rs  test_of.rs
calendar_calc/tests/snapshots/: test_1954__calendar_for_year_54@_2024-12-01.snap  test_1954__calendar_for_year_54@_2024-12-03.snap  test_1954__calendar_for_year_54@_2024-12-05.snap  test_1954__calendar_for_year_54@_2024-12-06.snap  test_1954__calendar_for_year_54@_2024-12-07.snap  test_1954__calendar_for_year_54@_2024-12-08.snap  test_1954__calendar_for_year_54@_2024-12-09.snap  test_1954__calendar_for_year_54@_2024-12-10.snap  test_1954__calendar_for_year_54@_2024-12-11.snap  test_1954__calendar_for_year_54@_2024-12-12.snap  test_1954__calendar_for_year_54@_2024-12-13.snap  test_1954__calendar_for_year_54@_2024-12-14.snap  test_1954__calendar_for_year_54@_2024-12-15.snap  (+1125 more)
liturgy-backend/: Cargo.toml
liturgy-backend/src/: lib.rs  main.rs  web.rs
liturgy-backend/tests/: integration_static.rs
src/: lib.rs  (+2 more)
(+1216 files in other folders)
