[package]
name = "liturgy"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = ">=0.9.5"
bitflags = { version = ">=2.0", features = ["serde"] }
anyhow = "*"

# Web dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
test-case = "3.3"
insta = "1.43"
rayon = "1.11.0"