[package]
name = "calendar_calc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = ">=0.9.5"
bitflags = { version = ">=2.0", features = ["serde"] }
anyhow = "*"

[dev-dependencies]
test-case = "3.3"
insta = "1.43"
rayon = "1.11.0"